samples/_failures_safe/1761321400_acbfa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af73b52e.c: In function ‘main’:
./samples/SAFE/__tmp_af73b52e.c:177:24: error: missing terminating " character
  177 |                 printf("%-12s %-15s %
      |                        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_af73b52e.c:177:17: error: expected expression at end of input
  177 |                 printf("%-12s %-15s %
      |                 ^~~~~~
./samples/SAFE/__tmp_af73b52e.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af73b52e.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af73b52e.c:177:17: error: expected declaration or statement at end of input
